--- a/doc/named_entity_recognition.ipynb
+++ b/doc/named_entity_recognition.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "surprising-bundle",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "hollow-simpson",
    "metadata": {},
    "outputs": [
@@ -396,12 +396,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pyahocorasick\n",
-      "  Using cached pyahocorasick-1.4.1.tar.gz (321 kB)\n",
-      "Using legacy 'setup.py install' for pyahocorasick, since package 'wheel' is not installed.\n",
-      "Installing collected packages: pyahocorasick\n",
-      "    Running setup.py install for pyahocorasick ... \u001b[?25ldone\n",
-      "\u001b[?25hSuccessfully installed pyahocorasick-1.4.1\n",
+      "Requirement already satisfied: pyahocorasick in /Users/jdchoi/workspace/cs329/venv/lib/python3.9/site-packages (1.4.1)\n",
       "\u001b[33mWARNING: You are using pip version 20.3.3; however, version 21.0.1 is available.\n",
       "You should consider upgrading via the '/Users/jdchoi/workspace/cs329/venv/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
      ]
@@ -430,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "political-progress",
    "metadata": {},
    "outputs": [],
@@ -438,7 +433,7 @@
     "from typing import Iterable, Tuple, Any\n",
     "from types import SimpleNamespace\n",
     "\n",
-    "def create_ac(data: Iterable[Tuple[str, Any]]):\n",
+    "def create_ac(data: Iterable[Tuple[str, Any]]) -> ahocorasick.Automaton:\n",
     "    \"\"\"\n",
     "    Creates the Aho-Corasick automation and adds all (span, value) pairs in the data and finalizes this matcher.\n",
     "    :param data: a collection of (span, value) pairs.\n",
@@ -459,40 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "numerous-computer",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = {'A': 0, 'B': 1, 'C': 2}\n",
-    "b = SimpleNamespace(A=0, B=1, C=2)\n",
-    "\n",
-    "print(a['A'])\n",
-    "print(b.A)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "decent-scroll",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AC = create_ac(GAZETTEER)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "pregnant-banner",
    "metadata": {},
    "outputs": [
@@ -508,6 +470,8 @@
     }
    ],
    "source": [
+    "AC = create_ac(GAZETTEER)\n",
+    "\n",
     "text = 'Dr. Choi is a Korean living in the United States of America '\n",
     "tokens = text.split()\n",
     "\n",
@@ -520,21 +484,19 @@
    "id": "intellectual-advertising",
    "metadata": {},
    "source": [
-    "### Exercise\n",
-    "\n",
-    "Write a function `match()` that returns a list of entities where each entity spans over only token boundaries:"
+    "Let us write the `match()` function that returns a list of entities where each entity spans over only token boundaries:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "forbidden-factory",
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import List, Set\n",
     "\n",
-    "def match(AC, tokens: List[str]) -> List[Tuple[str, int, int, Set[str]]]:\n",
+    "def match(AC: ahocorasick.Automaton, tokens: List[str]) -> List[Tuple[str, int, int, Set[str]]]:\n",
     "    \"\"\"\n",
     "    :param AC: the finalized Aho-Corasick automation.\n",
     "    :param tokens: the list of input tokens.\n",
@@ -542,14 +504,32 @@
     "             - span: str,\n",
     "             - start token index (inclusive): int\n",
     "             - end token index (exclusive): int\n",
-    "             - a set of values for the span: Set[Any]\n",
+    "             - a set of values for the span: Set[str]\n",
     "    \"\"\"\n",
-    "    # TODO: to be updated"
+    "    smap, emap, idx = dict(), dict(), 0\n",
+    "    for i, token in enumerate(tokens):\n",
+    "        smap[idx] = i\n",
+    "        idx += len(token)\n",
+    "        emap[idx] = i\n",
+    "        idx += 1\n",
+    "\n",
+    "    # find matches\n",
+    "    text = ' '.join(tokens)\n",
+    "    spans = []\n",
+    "    for eidx, t in AC.iter(text):\n",
+    "        eidx += 1\n",
+    "        sidx = eidx - len(t.span)\n",
+    "        sidx = smap.get(sidx, None)\n",
+    "        eidx = emap.get(eidx, None)\n",
+    "        if sidx is None or eidx is None: continue\n",
+    "        spans.append((t.span, sidx, eidx + 1, t.values))\n",
+    "\n",
+    "    return spans"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "sunrise-print",
    "metadata": {},
    "outputs": [
@@ -569,12 +549,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "solid-length",
+   "metadata": {},
+   "source": [
+    "### Exercise\n",
+    "\n",
+    "Write the function `remove_subsets()` that removes entities that are subsets of other entities:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bronze-delay",
+   "execution_count": 23,
+   "id": "identical-flush",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def remove_subsets(entities: List[Tuple[str, int, int, Set[str]]]) -> List[Tuple[str, int, int, Set[str]]]:\n",
+    "    \"\"\"\n",
+    "    :param entities: a list of tuples where each tuple consists of\n",
+    "             - span: str,\n",
+    "             - start token index (inclusive): int\n",
+    "             - end token index (exclusive): int\n",
+    "             - a set of values for the span: Set[str] \n",
+    "    :return: a list of entities where each entity is represented by a tuple of (span, start index, end index, value set)\n",
+    "    \"\"\"\n",
+    "    tmp = []\n",
+    "    # TODO: To be updated\n",
+    "    return tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "surprising-samuel",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Korean', 4, 5, {'language'})\n",
+      "('United States', 8, 10, {'country'})\n"
+     ]
+    }
+   ],
+   "source": [
+    "entities = match(AC, tokens)\n",
+    "entities = remove_subsets(entities)\n",
+    "for entity in entities: print(entity)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "universal-market",
+   "metadata": {},
+   "source": [
+    "## NER with Large Gazetteers\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "egyptian-wholesale",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob, os\n",
+    "\n",
+    "def read_gazetteers(dirname: str) -> ahocorasick.Automaton:\n",
+    "    data = []\n",
+    "    for filename in glob.glob(os.path.join(dirname, '*.txt')):\n",
+    "        label = os.path.basename(filename)[:-4]\n",
+    "        for line in open(filename):\n",
+    "            data.append((line.strip(), label))\n",
+    "    return create_ac(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "stuffed-destruction",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AC = read_gazetteers('../dat/ner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "secret-defensive",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Korean', 4, 5, {'language'})\n",
+      "('United States', 8, 10, {'country'})\n"
+     ]
+    }
+   ],
+   "source": [
+    "for span in match(AC, tokens):\n",
+    "    print(span)"
+   ]
   }
  ],
  "metadata": {
