--- a/src/quiz/quiz0.ipynb
+++ b/src/quiz/quiz0.ipynb
@@ -3,22 +3,33 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10 14 18]\n"
+      "['Welcome', 'to', 'the', 'world', 'of', '\"', 'Computational', 'Linguistics', '\"', '!']\n",
+      "[(0, 7), (8, 10), (11, 14), (15, 20), (21, 23), (24, 25), (25, 38), (39, 50), (50, 51), (51, 52)]\n",
+      "['We', \"'ll\", 'have', 'lots', 'of', 'fun', 'this', 'semester', '.']\n",
+      "[(53, 55), (55, 58), (59, 63), (64, 68), (69, 71), (72, 75), (76, 80), (81, 89), (89, 90)]\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "from elit_tokenizer import EnglishTokenizer\n",
     "\n",
-    "a = np.array([1,2,3])\n",
-    "b = np.array([4,5,6])\n",
-    "print((a + b) * 2)"
+    "tokenizer = EnglishTokenizer()\n",
+    "text = 'Welcome to the world of \"Computational Linguistics\"! We\\'ll have lots of fun this semester.'\n",
+    "sentences = tokenizer.decode(text, segment=2)\n",
+    "\n",
+    "for sentence in sentences:\n",
+    "    print(sentence.tokens)\n",
+    "    print(sentence.offsets)"
    ]
   }
  ],
