--- a/docs/string_matching.ipynb
+++ b/docs/string_matching.ipynb
@@ -25,7 +25,7 @@
     "  * [findall()](#findall())\n",
     "  * [finditer()](#finditer())\n",
     "* [Tokenization](#Tokenization)\n",
-    "  * [Exercise](#Exercise)\n",
+    "  * [Exercise 2](#Exercise-2)\n",
     "\n",
     "### References\n",
     "\n",
@@ -863,7 +863,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise\n",
+    "### Exercise 2\n",
     "\n",
     "Define regular expressions to match the following cases:\n",
     "\n",
