--- a/docs/string_matching.ipynb
+++ b/docs/string_matching.ipynb
@@ -19,12 +19,12 @@
     "  * [Grouping](#Grouping)\n",
     "  * [Repetitions](#Repetitions)\n",
     "  * [Special Characters](#Special-Characters)\n",
-    "* [Functions](#Regex-Functions)\n",
+    "* [Functions](#Functions)\n",
     "  * [match()](#match())\n",
     "  * [search()](#search())\n",
     "  * [findall()](#findall())\n",
     "  * [finditer()](#finditer())\n",
-    "* [Tokenization](#Tokenization)\n",
+    "* [Tokenization](#Tokenization-with-Regex)\n",
     "  * [Exercise 2](#Exercise-2)\n",
     "\n",
     "### References\n",
@@ -37,23 +37,22 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Tokenization\n",
-    "\n",
-    "Many NLP applications require input text to be tokenized where each token represents a meaningful linguistic unit such as a word."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "# Tokenization\n",
+    "\n",
+    "Many NLP applications require input text to be tokenized where each token represents a meaningful linguistic unit such as a word."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Split by Whitespace\n",
+    "## Split by Whitespace\n",
     "\n",
     "It is easy to tokenize a string by whitespace using the `split()` function."
    ]
@@ -125,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Substring Matching\n",
+    "## Substring Matching\n",
     "\n",
     "It is possible to resolve the above issues through subastring matching:"
    ]
@@ -172,6 +171,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "012\n",
+      "012\n",
+      "234\n",
+      "567\n",
+      "567\n",
+      "56\n",
+      "56\n",
+      "5\n",
+      "01234567\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = '01234567'  # string is a primative\n",
+    "print(s[0:3])\n",
+    "print(s[:3])\n",
+    "print(s[2:5])\n",
+    "print(s[5:8])\n",
+    "print(s[5:])\n",
+    "print(s[5:-1])\n",
+    "print(s[5:len(s)-1])\n",
+    "print(s[5:-2])\n",
+    "rint(s[:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "[0, 1, 100, 3] [0, 1, 100, 3]\n",
+      "[0, 1, 100, 3] [0, 1, 300, 3]\n",
+      "4 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [0, 1, 2, 3]  # list is an object type\n",
+    "print(a[1:3])\n",
+    "b = a  # copy by reference\n",
+    "b[2] = 100\n",
+    "print(a, b)\n",
+    "\n",
+    "b = a[:]  # copy by value\n",
+    "b[2] = 300\n",
+    "print(a, b)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -209,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function Definition\n",
+    "## Function Definition\n",
     "\n",
     "Let us convert the above code into a function:"
    ]
@@ -268,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 1\n",
+    "## Exercise 1\n",
     "\n",
     "Let us consider the following example:"
    ]
@@ -350,23 +411,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
-   "source": [
-    "## Regular Expressions"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Regular Expressions\n",
+    "\n",
     "## Syntax\n",
     "\n",
     "Regular expressions provide powerful ways to match strings and beyond.\n",
@@ -684,7 +733,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tokenization\n",
+    "## Tokenization with Regex\n",
     "\n",
     "Let us define a regular expression that matches the necessary patterns for tokenization:"
    ]
