--- a/docs/string_matching.ipynb
+++ b/docs/string_matching.ipynb
@@ -910,7 +910,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Exercise 2\n",
     "\n",
@@ -923,15 +927,6 @@
     "* Number: `1/2`, `123-456-7890`, `1,000,000`\n",
     "* Unit: `$10`, `#20`, `5kg`"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
