--- a/docs/string_matching.ipynb
+++ b/docs/string_matching.ipynb
@@ -15,17 +15,20 @@
     "\n",
     "### Regular Expressions\n",
     "\n",
-    "* [Syntax](#Syntax)\n",
-    "  * [Grouping](#Grouping)\n",
-    "  * [Repetitions](#Repetitions)\n",
-    "  * [Special Characters](#Special-Characters)\n",
-    "* [Functions](#Functions)\n",
-    "  * [match()](#match())\n",
-    "  * [search()](#search())\n",
-    "  * [findall()](#findall())\n",
-    "  * [finditer()](#finditer())\n",
+    "#### Syntax\n",
+    "\n",
+    "* [Grouping](#Grouping)\n",
+    "* [Repetitions](#Repetitions)\n",
+    "* [Special Characters](#Special-Characters)\n",
+    "\n",
+    "#### Functions\n",
+    "\n",
+    "* [match()](#match())\n",
+    "* [search()](#search())\n",
+    "* [findall()](#findall())\n",
+    "* [finditer()](#finditer())\n",
     "* [Tokenization](#Tokenization-with-Regex)\n",
-    "  * [Exercise 2](#Exercise-2)\n",
+    "* [Exercise 2](#Exercise-2)\n",
     "\n",
     "### References\n",
     "\n",
@@ -37,16 +40,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
    "source": [
     "# Tokenization\n",
     "\n",
     "Many NLP applications require input text to be tokenized where each token represents a meaningful linguistic unit such as a word."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -168,68 +169,6 @@
     "    new_tokens.append(token)\n",
     "\n",
     "print(new_tokens)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "012\n",
-      "012\n",
-      "234\n",
-      "567\n",
-      "567\n",
-      "56\n",
-      "56\n",
-      "5\n",
-      "01234567\n"
-     ]
-    }
-   ],
-   "source": [
-    "s = '01234567'  # string is a primative\n",
-    "print(s[0:3])\n",
-    "print(s[:3])\n",
-    "print(s[2:5])\n",
-    "print(s[5:8])\n",
-    "print(s[5:])\n",
-    "print(s[5:-1])\n",
-    "print(s[5:len(s)-1])\n",
-    "print(s[5:-2])\n",
-    "rint(s[:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2]\n",
-      "[0, 1, 100, 3] [0, 1, 100, 3]\n",
-      "[0, 1, 100, 3] [0, 1, 300, 3]\n",
-      "4 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = [0, 1, 2, 3]  # list is an object type\n",
-    "print(a[1:3])\n",
-    "b = a  # copy by reference\n",
-    "b[2] = 100\n",
-    "print(a, b)\n",
-    "\n",
-    "b = a[:]  # copy by value\n",
-    "b[2] = 300\n",
-    "print(a, b)"
    ]
   },
   {
@@ -916,7 +855,7 @@
     }
    },
    "source": [
-    "### Exercise 2\n",
+    "## Exercise 2\n",
     "\n",
     "Define regular expressions to match the following cases:\n",
     "\n",
