--- a/docs/string_matching.ipynb
+++ b/docs/string_matching.ipynb
@@ -764,7 +764,7 @@
     "                tokens.append(t)\n",
     "        prev_idx = m.end()\n",
     "\n",
-    "    t = text[prev_idx:].strip()\n",
+    "    t = text[prev_idx:]\n",
     "    if t:  tokens.append(t)\n",
     "    return tokens"
    ]
