--- a/docs/vector_space_models.ipynb
+++ b/docs/vector_space_models.ipynb
@@ -18,13 +18,15 @@
     "* [Frequency Counts](#Frequency-Counts)\n",
     "* [Exercise 1](#Exercise-1)\n",
     "* [TF-IDF](#TF-IDF)\n",
-    "\n",
+    "* [Similarity Metrics](#Similarity-Metrics)\n",
     "\n",
     "## References\n",
     "\n",
     "* [Vector Space Model](https://en.wikipedia.org/wiki/Vector_space_model)\n",
     "* [Bag-of-Words Model](https://en.wikipedia.org/wiki/Bag-of-words_model)\n",
-    "* [TF-IDF](https://en.wikipedia.org/wiki/Tf–idf)"
+    "* [TF-IDF](https://en.wikipedia.org/wiki/Tf–idf)\n",
+    "* [Euclidean Distance](https://en.wikipedia.org/wiki/Euclidean_distance)\n",
+    "* [Cosine Similarity](https://en.wikipedia.org/wiki/Cosine_similarity)"
    ]
   },
   {
@@ -38,21 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting requests\n",
-      "  Using cached requests-2.27.1-py2.py3-none-any.whl (63 kB)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (3.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (2021.10.8)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (1.26.8)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (2.0.10)\n",
-      "Installing collected packages: requests\n",
-      "Successfully installed requests-2.27.1\n"
+      "Requirement already satisfied: requests in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (2.27.1)\r\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (1.26.8)\r\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (3.3)\r\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (2021.10.8)\r\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/jdchoi/workspace/cs329/venv/lib/python3.10/site-packages (from requests) (2.0.10)\r\n"
      ]
     }
    ],
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,21 +359,21 @@
     "    D = len(tfs)\n",
     "\n",
     "    for dkey, term_counts in tfs.items():\n",
-    "        out[dkey] = {t: tf  / dfs[term] for t, tf in term_counts.items()}\n",
+    "        out[dkey] = {t: tf  / dfs[t] for t, tf in term_counts.items()}\n",
     "\n",
     "    return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.109514790065465\n"
+      "0.20930232558139536\n"
      ]
     }
    ],
@@ -385,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -416,45 +415,74 @@
     }
    ],
    "source": [
-    "    for t, tf in sorted(tfs['Androcles'].items(), key=lambda x: x[1], reverse=True)[:20]:\n",
-    "        print(t, tf)"
+    "for t, score in sorted(tfs['Androcles'].items(), key=lambda x: x[1], reverse=True)[:20]:\n",
+    "    print(t, score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the 6.910032866812145\n",
-      "and 6.564531223471538\n",
-      ", 6.21902958013093\n",
-      "to 4.491521363427894\n",
-      ". 4.146019720087287\n",
-      "his 3.109514790065465\n",
-      "Lion 3.109514790065465\n",
-      "Androcles 2.764013146724858\n",
-      "was 2.764013146724858\n",
-      "he 2.418511503384251\n",
-      "him 2.0730098600436433\n",
-      "came 1.382006573362429\n",
-      "a 1.382006573362429\n",
-      "slave 1.0365049300218216\n",
-      "from 1.0365049300218216\n",
-      "out 1.0365049300218216\n",
-      "all 1.0365049300218216\n",
-      "of 1.0365049300218216\n",
-      "forest 0.6910032866812145\n",
-      "As 0.6910032866812145\n"
+      "Androcles 8.0\n",
+      "Emperor 2.0\n",
+      "wandering 1.0\n",
+      "moaning 1.0\n",
+      "flee 1.0\n",
+      "bleeding 1.0\n",
+      "sentenced 1.0\n",
+      "arena 1.0\n",
+      "bounding 1.0\n",
+      "recognised 1.0\n",
+      "fawned 1.0\n",
+      "licked 1.0\n",
+      "story 1.0\n",
+      "Whereupon 1.0\n",
+      "pardoned 1.0\n",
+      "freed 1.0\n",
+      "slave 0.75\n",
+      "paw 0.6666666666666666\n",
+      "thorn 0.6666666666666666\n",
+      "pursue 0.5\n"
      ]
     }
    ],
    "source": [
-    "for t, tfidf in sorted(tfidfs['Androcles'].items(), key=lambda x: x[1], reverse=True)[:20]:\n",
-    "    print(t, tfidf)"
+    "for t, score in sorted(tfidfs['Androcles'].items(), key=lambda x: x[1], reverse=True)[:20]:\n",
+    "    print(t, score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Similarity Metrics\n",
+    "\n",
+    "Given two vectors, $X_i = (x_{i1}, \\ldots, x_{in})$ and $X_j = (x_{j1}, \\ldots, x_{jn})$, the **Euclidean distance** between $X_i$ and $X_j$ measures the magnitude between them:\n",
+    "\n",
+    "$$\n",
+    "\\mathrm{Euclidean}(X_i, X_j) = \\lVert X_i - X_j \\rVert = \\sqrt{\\sum_{k=1}^n (x_{ik} - x_{jk})^2}\n",
+    "$$\n",
+    "\n",
+    "On the other hand, the **Cosine similarity** measures the angle difference between them:\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\mathrm{Cosine}(X_i, X_j) = \\frac{X_i\\cdot X_j}{\\lVert X_i\\rVert\\lVert X_j\\rVert} = \\frac{\\sum_{\\forall k}(x_{ik} \\cdot x_{jk})}{\\sqrt{\\sum_{\\forall k}(x_{ik})^2} \\cdot \\sqrt{\\sum_{\\forall k}(x_{jk})^2}}\n",
+    "$$\n",
+    "\n",
+    "<img src=\"res/vector_similarities.jpg\" width=350/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us define the function `euclidean(x1, x2)` that takes two sparse vectors, `x1` and `x2`, and returns their Euclidean distance:"
    ]
   },
   {
